--- a/PersonnalProject/pom.xml
+++ b/PersonnalProject/pom.xml
@@ -7,13 +7,60 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>PersonnalProject Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  
+  
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
+	    <dependency>
+	      <groupId>junit</groupId>
+	      <artifactId>junit</artifactId>
+	      <version>3.8.1</version>
+	      <scope>test</scope>
+	    </dependency>
+	    
+	   
+	        <dependency>
+	            <groupId>javax.servlet</groupId>
+	            <artifactId>servlet-api</artifactId>
+	            <version>2.5</version>
+	            <scope>compile</scope>
+	        </dependency>
+	        
+	    	<dependency>
+			    <groupId>org.springframework</groupId>
+			    <artifactId>spring-webmvc</artifactId>
+			    <version>4.0.2.RELEASE</version>
+			</dependency>
+	    
+		    <dependency>
+		      <groupId>com.googlecode.gwtphonegap</groupId>
+		      <artifactId>gwtphonegap</artifactId>
+		      <version>1.8.1.0</version>
+			</dependency>
+		    
+		    <dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>bootstrap</artifactId>
+		    <version>3.2.0</version>
+		    <exclusions>
+		        <exclusion>
+		            <groupId>org.webjars</groupId>
+		            <artifactId>jquery</artifactId>
+		        </exclusion>
+		    </exclusions>
+			</dependency>
+			
+			 <dependency>
+			    <groupId>org.webjars</groupId>
+			    <artifactId>jqueryui-layout</artifactId>
+			    <version>1.4.0</version>
+			</dependency>
+			
+			<dependency>
+			    <groupId>org.webjars</groupId>
+			    <artifactId>jquery</artifactId>
+			    <version>2.1.1</version>
+			</dependency>
+	   
   </dependencies>
   <build>
     <finalName>PersonnalProject</finalName>
